# pymaterials

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  test.py
.github/workflows/: fast-tests.yml  pypi.yml  release-sphinx.yml  sphinx.yml  tests.yml
devtools/conda-envs/: docs_env.yaml
docs/: conf.py  index.rst
docs/api/: data.rst
docs/dev/: documentation.rst  overview.rst  unittest.rst
docs/getting_started/: installation.rst
materials_toolkit/: __init__.py
materials_toolkit/data/: __init__.py  base.py  collate.py  convex_hull.py  data.py  dataset.py  filter.py  loader.py  utils.py
materials_toolkit/data/datasets/: __init__.py  materials_project.py
materials_toolkit/data/graph/: fully_connected.py  molecular.py  neighbours_graph.py  triplets.py
materials_toolkit/graph/: molecular.py
materials_toolkit/models/alignn/: __init__.py  alignn.py  pretrained.py  utils.py
materials_toolkit/ms/: align.py  sample.py  sample_phase.py
tests/: test_data.py  test_installation.py
tests/data/: __init__.py  data_convex_hull.py  test_collate.py  test_data.py  test_dataset.py  utils.py
tests/data/dataset/: test_mp.py
tests/graph/: test_fully_connected.py  utils.py
