[tool.poetry]
name = "materials-toolkit"
version = "0.1.1"
description = "materials-toolkit is a python package created to facilitate the development of machine learning models in materials science"
authors = ["Astrid Klipfel <astridklipfel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch_geometric = "^2.3.1"
torch = "^2.0"
httpx = { version = "^0.22.0", source = "pypi" }

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2"
myst-parser = "*"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
