[tool.poetry]
name = "materials-toolkit"
version = "0.1.3"
description = "materials-toolkit is a python package created to facilitate the development of machine learning models in materials science"
authors = ["Astrid Klipfel <astridklipfel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
torch = "^2"
torch_geometric = "2.3.*"
pymatgen = ">=2023.7.17"
spgrep = ">=0.3.0"
h5py = "*"
tqdm = "*"
httpx = { version = "^0.22.0", source = "pypi" }

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-httpserver = "1.0.7"
pytest-timeout = "*"
toml = "*"
coverage = "*"
coverage-badge = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2"
sphinx-rtd-theme = "*"
myst-parser = "*"
sphinx-copybutton = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
